@@ -4,14 +4,20 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-if ( project.hasProperty("mainClass") ) {
+applicationDefaultJvmArgs = [
+        "-server", "-XX:+AggressiveOpts",
+        "-Xms7g",
+        "-Xmx7g"
+]
+
+if (project.hasProperty("mainClass")) {
     mainClassName = mainClass
 } else {
     mainClassName = "edu.unh.cs.ai.realtimesearch.RealTimeSearchKt"
 }
 
 buildscript {
-    ext.kotlin_version = '1.0.0'
+    ext.kotlin_version = '1.0.1-1'
     repositories {
         mavenCentral()
     }
@@ -27,6 +33,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'org.apache.commons:commons-math3:3.0'
+    compile 'commons-cli:commons-cli:1.3.1'
 
     compile 'org.springframework:spring-web:4.2.5.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
@@ -41,12 +48,39 @@ dependencies {
 }
 
 sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
-    test.java.srcDirs += 'src/test/kotlin'
+    main.java.srcDirs += file('src/main/kotlin')
+    test.java.srcDirs += file('src/test/kotlin')
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.12'
 }
 
 run {
-    if ( project.hasProperty("appArgs") ) {
+    if (project.hasProperty("appArgs")) {
         args = Eval.me(appArgs)
     }
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+task clientJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'edu.unh.cs.ai.realtimesearch.experiment.network.RealTimeSearchClientApplicationKt'
+    }
+    baseName = project.name + '-client'
+
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    with jar
 }
